# DemandGraph-Logistics

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/dashboard/: Home.py
apps/dashboard/pages/: 1_Demand_Forecasting.py  2_Route_Optimization.py
data/sample/: nyc_taxi_sample.csv
scripts/: evaluate_demo.py  init_db.py  seed_demo_data.py  train_forecaster.py
src/logistics_optimization/: __init__.py
src/logistics_optimization/api/: __init__.py  router.py
src/logistics_optimization/api/routes/: forecast.py  health.py  routing.py
src/logistics_optimization/core/: __init__.py  config.py  logger.py
src/logistics_optimization/dashboard/: __init__.py  api_client.py  charts.py
src/logistics_optimization/db/: database.py  models.py
src/logistics_optimization/domain/: __init__.py
src/logistics_optimization/domain/interfaces/: __init__.py  extensions.py  forecasting.py  routing.py
src/logistics_optimization/evaluation/: __init__.py  metrics.py
src/logistics_optimization/ml/: __init__.py
src/logistics_optimization/ml/forecasting/: __init__.py  datasets.py  predictor.py  trainer.py  transformer.py
src/logistics_optimization/repositories/: __init__.py  demand_repository.py  route_repository.py
src/logistics_optimization/schemas/: __init__.py  forecast.py  routing.py
src/logistics_optimization/services/: __init__.py  bootstrap.py  evaluation_service.py  forecasting_service.py  routing_service.py
tests/: test_metrics.py  test_preprocessing.py  test_routing.py
(+5 files in other folders)
