[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logistics-optimization-system"
version = "0.1.0"
description = "AI-Based Logistics Optimization System for Transportation Networks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.44.0",
  "requests>=2.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pandas>=2.2.0",
  "numpy>=2.1.0",
  "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]
ml = [
  "torch>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
